--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -12,7 +12,7 @@
                     <select ng-model="order.channel" style="float:left">
                         <option value="alipay" ng-selected="alipay==order.channel">支付宝</option>
                         <option value="wx" ng-selected="wx==order.channel">微信</option>
-                        <option value="udq" ng-selected="udq==order.channel">余额宝<a class="a-custome">({{user.balance}}元)</a></option>
+                        <option value="udq" ng-selected="udq==order.channel">余额<a class="a-custome">({{user.balance}}元)</a></option>
                     </select>
                 </label>
                 <!--<label class="item item-input item-select">
