测试账号添加

--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -75,6 +75,11 @@
             </label>
 
             <!--添加星级评价-->
+            <!--<div >
+                <div class="well">
+                    <div star rating-value="ratingValue" max="max"  readonly="{{readonly}}"></div>
+                </div>
+            </div>-->
             <fieldset class="score">
                 <button class="buttonclean" ng-click="doClean()" style="float:left">清除</button>
                 <legend>Score:</legend>
