--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -4,7 +4,7 @@
     </div>
 
     <ion-content padding="true" class="has-header">
-        <div style="height:50px"></div>
+        <div style="padding-top:20px"></div>
         <div class="row row-bottom row-text-align">
             <div class="col col-20 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
