--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -11,16 +11,6 @@
 
     <ion-content>
             <ion-list>
-                <!--<div class="item item-input input-costume">
-                    <label class="input-label"><span class="input-label"><h2>称呼</h2></span></label>
-                    <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" style="color:white;" required>
-                    <label class="input-costume">
-                        <select style="background-color:darkcyan; float:right" ng-model="user.sex">
-                            <option value="1" ng-model="user.sex">先生</option>
-                            <option value="2" ng-model="user.sex">女士</option>
-                        </select>
-                    </label>
-                </div>-->
                 <label class="item item-input input-costume">
                     <span class="input-label">称呼</span>
                     <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" style="color:white;" required>
@@ -36,12 +26,11 @@
                         <option value="2" ng-selected="2==user.sex">女士</option>
                     </select>
                 </label>-->
-                <ion-item class="input-costume" style="color:white;">
+                <!--<ion-item class="input-costume" style="color:white;">
                         <span class="input-labelsex">性别</span>
                         <label class="select-type"><input type="radio" name="sex" ng-model="user.sex" value='1' />男士</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <label class="select-type"><input type="radio" name="sex" ng-model="user.sex" value='2' />女士</label>
-                </ion-item>
-                <!--<ion-radio ng-model="user.sex" value ="person.sexValue" ng-repeat="person in persons"></ion-radio>-->
+                </ion-item>-->
             </ion-list>
         <button class="button allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="saveMemberInfo()">保存</button>
     </ion-content>
