--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -41,7 +41,7 @@
                     <button class="button mybutton-circle" ng-click="goToAutoList()">
                         <img src="image/myauto.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
-                    <p class="home-p">我的车辆</p>
+                    <p class="home-p">车辆信息</p>
                 </div>
             </div>
         </div>
