--- a/udqAutoApp/www/app/customer/member/recharge.html
+++ b/udqAutoApp/www/app/customer/member/recharge.html
@@ -1,4 +1,4 @@
-﻿<ion-view view-title="选择支付方式" class="ion-view-costum">
+﻿<ion-view view-title="充值" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
