--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -11,7 +11,7 @@
         <div class="row" style="border-bottom:1px solid white;">
             
             <div class="col col-20">
-                <img src="image/mydianqu.png" style="height:100%;width:100%;" />
+                <img src="image/mydianqu.png" style="height:55px;width:55px;" />
             </div>
             <div class="col col-60">
                 <i class="home-p1" ng-show="user.name!=undefined" style="font-size:16px">称呼：{{user.name}}</i><br />
