修复图片无法显示

--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -83,7 +83,7 @@
                     <div star rating-value="ratingValue" max="max"  readonly="{{readonly}}"></div>
                 </div>
             </div>-->
-            <div>
+            <div style="margin:10px 0 10px 10px">
                 <button class="button-score" id="button1" ng-click="grade(1)">不满意</button>
                 <button class="button-score" id="button2" ng-click="grade(2)">一&nbsp;&nbsp;&nbsp;般</button>
                 <button class="button-score" id="button3" ng-click="grade(3)">还可以</button>
