首页加提示

--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -54,6 +54,7 @@
 
             </div>
         </div>
+        <div style="color:#FFBC01;text-align:center;font-size:small">21:00前下单当天完成，21:00后下单24小时后完成</div>
     </ion-content>
 </ion-view>
 
